Remove unnecessary virtual keywords. Add Gnu GSL dependency to project because of the computation of the cdf of chi squared distribution. (Create new ChiSquaredCDFComputer class but it is not work properly.) Add sub sequence writer.

--- a/DataHandlingUtil/DataHandlingUtil.vcxproj
+++ b/DataHandlingUtil/DataHandlingUtil.vcxproj
@@ -71,9 +71,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="LoadData.hpp" />
+    <ClInclude Include="SubSeqWriter.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LoadData.cpp" />
+    <ClCompile Include="SubSeqWriter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
