--- a/Utils/Utils.vcxproj.filters
+++ b/Utils/Utils.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Splitter.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ChiSquaredCDFComputer.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ShannonEntropyComputer.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Splitter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ChiSquaredCDFComputer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
