--- a/JensenShannonDivComp/JensenShannonDivComp.vcxproj.filters
+++ b/JensenShannonDivComp/JensenShannonDivComp.vcxproj.filters
@@ -18,10 +18,33 @@
     <CudaCompile Include="Program.cu">
       <Filter>Source Files</Filter>
     </CudaCompile>
+    <CudaCompile Include="kernels.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+    <CudaCompile Include="CountMatrixHolderCuda.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CudaBasicIncludes.cuh">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SplitterWithCntMX.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CountMatrixHolder.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="kernels.cuh">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CountMatrixHolder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SplitterWithCntMX.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
